--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,14 +1,17 @@
-click==8.1.2
-colorama==0.4.4
-Flask==2.1.1
+certifi==2021.10.8
+charset-normalizer==2.0.11
+click==8.0.3
+Flask==2.0.3
 Flask-Cors==3.0.10
 Flask-SQLAlchemy==2.5.1
 greenlet==1.1.2
-itsdangerous==2.1.2
-Jinja2==3.1.1
-MarkupSafe==2.1.1
-mysqlclient==2.1.0
+idna==3.3
+itsdangerous==2.0.1
+Jinja2==3.0.3
+MarkupSafe==2.0.1
 python-dotenv==0.20.0
+requests==2.27.1
 six==1.16.0
 SQLAlchemy==1.4.35
-Werkzeug==2.1.1
+urllib3==1.26.8
+Werkzeug==2.0.3
